--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  firebase_auth:
+  google_sign_in:
+  cached_network_image:
+  firebase_core:
+  flutter_svg:
+  adobe_xd:
+  firebase_dynamic_links:
+  uuid:
 
 dev_dependencies:
   flutter_test:
